@@ -36,6 +36,7 @@
 - Stop monitoring on config change {pull}18284[18284]
 - Fix jq: command not found {pull}18408[18408]
 - Avoid Chown on windows {pull}18512[18512]
+- Clean action store after enrolling to new configuration {pull}18656[18656]
 
 ==== New features
 
